<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edt_border"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/transparent_white"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_border"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/transparent_white"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>